create class on h1 tag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </ul>
   <header class="masthead" role="banner">
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
-      <h1 class="push-0">Around the World Conferencing</h1>
+      <h1 class="company-name push-0">Around the World Conferencing</h1>
     </div>
 
     <div class="nav" tabindex="0">
