--- a/registration.html
+++ b/registration.html
@@ -11,6 +11,28 @@
 </head>
 <body>
 
+  <ul>
+    <li><a href="#main"></a></li>
+    <li><a href="#nav"></a></li>
+  </ul>
+  <header class="masthead" role="banner">
+    <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
+      <h1 class="company-name push-0">Around the World Conferencing</h1>
+    </div>
+
+    <div class="nav" tabindex="0">
+      <nav class="wrapper gutter-1-2" id="nav" tabindex="0" role="navigation">
+        <ol class="mega list-group-inline push-0">
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#home">Home</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#plans">Plans</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#support">Support</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#about">About</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#contact">Contact</a></li>
+        </ol>
+      </nav>
+    </div>
+  </header>
+
   <section class="contact max-length gutter pad-t-2 pad-b-2">
     <div>
       <h1>Want to stay connected with your business?</h1>
