Fix the footer tags

--- a/index.html
+++ b/index.html
@@ -16,27 +16,89 @@
     <li><a href="#main"></a></li>
     <li><a href="#nav"></a></li>
   </ul>
-  <header class="masthead" role="banner">
-    <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
+  <header class="grid masthead pad-t-1-2 grid-bottom" role="banner">
+    <div class="pad-b-1-2 gutter-1-2 unit xs-1 s-1 m-1-2 l-1-4">
       <h1 class="company-name push-0">Around the World Conferencing</h1>
     </div>
 
-    <div class="nav" tabindex="0">
-      <nav class="wrapper gutter-1-2" id="nav" tabindex="0" role="navigation">
+    <div class="nav unit xs-1 m-1-2 l-3-4" tabindex="0">
+      <nav class="2" id="nav" tabindex="0" role="navigation">
         <ol class="mega list-group-inline push-0">
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#home">Home</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#plans">Plans</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#support">Support</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#about">About</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#contact">Contact</a></li>
+          <li><a id="current" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="index.html">Home</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="plans.html">Plans</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="support.html">Support</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="about.html">About</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="contact.html">Contact</a></li>
         </ol>
       </nav>
     </div>
   </header>
 
-  <main>
+
+  <div class="grid">
+
+    <div class="banner unit xs-1 s-1 m-1-2">
+      <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
+    </div>
+
+    <div class="banner-content pad-t-2 gutter-1-2 unit xs-1 s-1 m-1-2 l-1-2">
+      <h2>Get Support Anywhere!</h2>
+      <p class="push-2">An affordable plan for every budget</p>
+      <div>
+      <a class="btn btn-big right" href="registration.html">Sign Up Now!</a>
+    </div>
+
+    </div>
+
+
+  </div>
+
+  <main class="grid grid-stretch">
+        <div class="unit unit-content-distribute plans xs-1 s-1 m-1-2 l-1-2">
+          <h2>Plans</h2>
+          <p>An affordable plan for every budget</p>
+          <p class="content-fill">See why we are number one in the industry</p>
+          <div>
+            <a class="btn btn-big right" href="plans.html">Get Started</a>
+          </div>
+        </div>
+        <div class="unit support xs-1 s-1 m-1-2 l-1-2">
+          <h2>Support</h2>
+          <p>Having trouble connecting to our servers?</p>
+          <p>We are here to help you</p>
+          <p>Try these troubleshooting steps</p>
+          <a class="btn btn-big right" href="support.html">Get Support</a>
+        </div>
+
+
+
+
+        <div class="about unit xs-1 s-1 m-1-2 l-1-2 push-1-2">
+          <h2>About</h2>
+          <p></p>
+          <a class="btn btn-big right" href="about.html">Learn More</a>
+        </div>
+
+
+        <div class="contact unit xs-1 s-1 m-1-2 l-1-2 push-1-2">
+          <h2>Contact</h2>
+          <p></p>
+          <a class="btn btn-big right" href="contact.html">Call Us Today</a>
+        </div>
+
 
   </main>
-  <footer></footer>
+  <footer>
+    <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
+    </ul>
+  </footer>
 </body>
 </html>
