--- a/support.html
+++ b/support.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
@@ -8,7 +8,9 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,400i" rel="stylesheet">
 </head>
+<body>
 
 <ul>
   <li><a href="#main"></a></li>
@@ -22,12 +24,90 @@
   <div class="nav" tabindex="0">
     <nav class="wrapper gutter-1-2" id="nav" tabindex="0" role="navigation">
       <ol class="mega list-group-inline push-0">
-        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#home">Home</a></li>
-        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#plans">Plans</a></li>
-        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#support">Support</a></li>
-        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#about">About</a></li>
-        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#contact">Contact</a></li>
+        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="index.html">Home</a></li>
+        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="plans.html">Plans</a></li>
+        <li><a id="current" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="support.html">Support</a></li>
+        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="about.html">About</a></li>
+        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="contact.html">Contact</a></li>
       </ol>
     </nav>
   </div>
 </header>
+
+
+  <main class="background">
+    <div class="grid text-center island">
+      <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">
+        <div class="box-1-2">
+          <p class="gutter pad-b-1-2">Basic</p>
+        </div>
+        <div class="plans">
+
+
+
+          <img src="" alt="">
+
+
+
+          <ol class="list-group gutter-2 text-left">
+            <li>Host up to 100 participants</li>
+            <li>Unlimited 1 to 1 meetings</li>
+            <li>45 minute limit on group meetings</li>
+            <li>Unlimited number of meetings</li>
+            <li>Online Support</li>
+            <li>Video Conferencing Features</li>
+            <li>Web Conferencing Features</li>
+            <li>Group Collaboration Features</li>
+            <li>Security</li>
+          </ol>
+
+          <div class="box">
+
+          </div>
+        </div>
+      </div>
+      <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">
+        <div class="box-1-2">
+          <p class="gutter pad-b-1-2">Basic</p>
+        </div>
+        <div class="plans">
+
+
+
+          <img src="" alt="">
+
+
+
+          <ol class="list-group gutter">
+            <li>Host up to 100 participants</li>
+            <li>Unlimited 1 to 1 meetings</li>
+            <li>45 minute limit on group meetings</li>
+            <li>Unlimited number of meetings</li>
+            <li>Online Support</li>
+            <li>Video Conferencing Features</li>
+            <li>Web Conferencing Features</li>
+            <li>Group Collaboration Features</li>
+            <li>Security</li>
+          </ol>
+
+          <div class="box">
+
+          </div>
+        </div>
+      </div>
+    </div>
+</main>
+<footer>
+  <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
+  </ul>
+</footer>
+</body>
+</html>
