Add proper information to the plans index

--- a/plans.html
+++ b/plans.html
@@ -87,15 +87,14 @@
             </div>
           </div>
           <ol class="list-group gutter">
-            <li>Host up to 100 participants</li>
-            <li>Unlimited 1 to 1 meetings</li>
-            <li>45 minute limit on group meetings</li>
-            <li>Unlimited number of meetings</li>
-            <li>Online Support</li>
-            <li>Video Conferencing Features</li>
-            <li>Web Conferencing Features</li>
-            <li>Group Collaboration Features</li>
-            <li>Security</li>
+            <li>All Basic features</li>
+            <li>Unlimited meeting duration for all meeting sizes</li>
+            <li>User management</li>
+            <li>Admin feature controls</li>
+            <li>Reporting</li>
+            <li>Custom personal meeting ID</li>
+            <li>Assign scheduler</li>
+            <li>Skype for business</li>
           </ol>
           <div class="push text-center">
             <a class="btn btn-big" href="registration.html">Sign Up Now!</a>
@@ -122,15 +121,17 @@
             </div>
           </div>
           <ol class="list-group gutter">
-            <li>Host up to 100 participants</li>
-            <li>Unlimited 1 to 1 meetings</li>
-            <li>45 minute limit on group meetings</li>
-            <li>Unlimited number of meetings</li>
-            <li>Online Support</li>
-            <li>Video Conferencing Features</li>
-            <li>Web Conferencing Features</li>
-            <li>Group Collaboration Features</li>
-            <li>Security</li>
+            <li>All Xtra features</li>
+            <li>includes 200 participants</li>
+            <li>Dedicated phone support</li>
+            <li>Admin dashboard</li>
+            <li>Managed domains</li>
+            <li>Single sign-on</li>
+            <li>Company branding</li>
+            <li>Custom emails</li>
+            <li>Cloaud recording</li>
+            <li>24/7 support whereever you are in the world</li>
+
           </ol>
           <div class="push text-center">
             <a class="btn btn-big" href="registration.html">Sign Up Now!</a>
