rename files in atom

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 </head>
 <body>
 
-  <ul>
-    <li><a href="#main"></a></li>
-    <li><a href="#nav"></a></li>
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
   </ul>
+
   <header class="grid masthead pad-t-1-2 grid-bottom" role="banner">
     <div class="pad-b-1-2 gutter-1-2 unit xs-1 s-1 m-1-2 l-1-4">
       <h1 class="company-name push-0">Around the World Conferencing</h1>
@@ -51,7 +52,7 @@
 
   </div>
 
-  <main class="grid grid-stretch">
+  <main role="main" id="main" class="grid grid-stretch">
     <div class="unit unit-content-distribute plans xs-1 s-1 m-1-2 l-1-2">
       <h2>Plans</h2>
       <p>An affordable plan for every budget</p>
@@ -60,7 +61,7 @@
         <a class="btn btn-big right" href="plans.html">Get Started</a>
       </div>
     </div>
-    <div class="unit support xs-1 s-1 m-1-2 l-1-2">
+    <div class="support unit xs-1 s-1 m-1-2 l-1-2" id="support">
       <h2>Support</h2>
       <p>Having trouble connecting to our servers?</p>
       <p>We are here to help you</p>
@@ -68,13 +69,13 @@
       <a class="btn btn-big right" href="support.html">Get Support</a>
     </div>
 
-    <div class="about unit xs-1 s-1 m-1-2 l-1-2 push-1-2">
+    <div class="about unit xs-1 s-1 m-1-2 l-1-2 push-1-2" id="about">
       <h2>About</h2>
       <p></p>
       <a class="btn btn-big right" href="about.html">Learn More</a>
     </div>
 
-    <div class="contact unit xs-1 s-1 m-1-2 l-1-2 push-1-2">
+    <div class="contact unit xs-1 s-1 m-1-2 l-1-2 push-1-2" id="contact">
       <h2>Contact</h2>
       <p></p>
       <a class="btn btn-big right" href="contact.html">Call Us Today</a>
