re-link the pages of the SAAS website

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <nav class="2" id="nav" tabindex="0" role="navigation">
         <ol class="mega list-group-inline push-0">
           <li><a id="current" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="index.html">Home</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="plans.html">Plans</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="pricing.html">Plans</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="support.html">Support</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="about.html">About</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="contact.html">Contact</a></li>
@@ -45,7 +45,7 @@
       <h2>Get Support Anywhere!</h2>
       <p class="push-2">An affordable plan for every budget</p>
       <div>
-        <a class="btn btn-big right" href="registration.html">Sign Up Now!</a>
+        <a class="btn btn-big right" href="sign-up.html">Sign Up Now!</a>
       </div>
 
     </div>
@@ -53,7 +53,7 @@
   </div>
 
   <main role="main" id="main" class="grid grid-stretch">
-    <div class="unit unit-content-distribute plans xs-1 s-1 m-1-2 l-1-2">
+    <div class="unit unit-content-distribute plans xs-1 s-1 m-1-2 l-1-2" id="prices">
       <h2>Plans</h2>
       <p>An affordable plan for every budget</p>
       <p class="content-fill">See why we are number one in the industry</p>
