--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       <nav class="wrapper gutter-1-2" id="nav" tabindex="0" role="navigation">
         <ol class="mega list-group-inline push-0">
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="index.html">Home</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="plans.html">Plans</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="pricing.html">Plans</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="support.html">Support</a></li>
           <li><a id="current" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="about.html">About</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="contact.html">Contact</a></li>
