--- a/sign-up.html
+++ b/sign-up.html
@@ -25,7 +25,7 @@
       <nav class="wrapper gutter-1-2" id="nav" tabindex="0" role="navigation">
         <ol class="mega list-group-inline push-0">
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#home">Home</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#plans">Plans</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#pricing">Plans</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#support">Support</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#about">About</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="#contact">Contact</a></li>
