add role to footer tags

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         </div>
         </div>
     </main>
-    <footer>
+    <footer role="contentinfo">
       <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
         <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
         <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
