--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <a class="btn btn-big right" href="contact.html">Call Us Today</a>
     </div>
   </main>
-  <footer>
+  <footer role="contentinfo">
     <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
       <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
       <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
