--- a/pricing.html
+++ b/pricing.html
@@ -144,7 +144,7 @@
 
     </div>
   </main>
-  <footer>
+  <footer role="contentinfo">
     <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
       <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
       <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
