Change name of files in my code

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="index.html">Home</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="pricing.html">Plans</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="support.html">Support</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="about.html">About</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="tour.html">About</a></li>
           <li><a id="current" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="contact.html">Contact</a></li>
         </ol>
       </nav>
