--- a/pricing.html
+++ b/pricing.html
@@ -26,7 +26,7 @@
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="index.html">Home</a></li>
           <li><a id="current" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="pricing.html">Plans</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="support.html">Support</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="about.html">About</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="tour.html">About</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="contact.html">Contact</a></li>
         </ol>
       </nav>
@@ -130,7 +130,7 @@
             <li>Company branding</li>
             <li>Custom emails</li>
             <li>Cloaud recording</li>
-            <li>24/7 support whereever you are in the world</li>
+            <li>24/7 support anywhere</li>
 
           </ol>
           <div class="push text-center">
