Fix spacing issue

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   </div>
 
   <main role="main" id="main" class="grid grid-stretch">
-    <section>
-      <div class="unit unit-content-distribute plans xs-1 s-1 m-1-2 l-1-2" id="prices">
+    <section class="unit unit-content-distribute plans xs-1 s-1 m-1-2 l-1-2" id="prices">
+      <div>
         <h2>Plans</h2>
         <p>An affordable plan for every budget</p>
         <p class="content-fill">See why we are number one in the industry</p>
@@ -63,20 +63,24 @@
         </div>
       </div>
     </section>
-    <section>
-      <div class="support unit xs-1 s-1 m-1-2 l-1-2" id="support">
+    <section class="support unit xs-1 s-1 m-1-2 l-1-2" id="support">
+      <div>
         <h2>Support</h2>
         <p>Having trouble connecting to our servers?</p>
         <p>We are here to help you</p>
         <p>Try these troubleshooting steps</p>
         <a class="btn btn-big right" href="support.html">Get Support</a>
       </div>
-      <div class="about unit xs-1 s-1 m-1-2 l-1-2 push-1-2" id="about">
+    </section>
+    <section class="tour unit xs-1 s-1 m-1-2 l-1-2" id="tour">
+      <div>
         <h2>About</h2>
         <p></p>
-        <a class="btn btn-big right" href="about.html">Learn More</a>
+        <a class="btn btn-big right" href="tour.html">Learn More</a>
       </div>
-      <div class="contact unit xs-1 s-1 m-1-2 l-1-2 push-1-2" id="contact">
+    </section>
+    <section class="contact unit xs-1 s-1 m-1-2 l-1-2" id="contact">
+      <div>
         <h2>Contact</h2>
         <p></p>
         <a class="btn btn-big right" href="contact.html">Call Us Today</a>
