--- a/pricing.html
+++ b/pricing.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <ul>
-    <li><a href="#main"></a></li>
-    <li><a href="#nav"></a></li>
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
   </ul>
   <header class="masthead" role="banner">
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
