Create table for tour page

--- a/sign-up.html
+++ b/sign-up.html
@@ -40,7 +40,7 @@
       <p class="mega">Please select one of our plans that is budget friendly and offers 24/7 support to its users.</p>
     </div>
 
-  <form class="push-0" method="POST" action="">
+  <form class="push-0" method="POST">
       <fieldset>
         <legend>Personal details</legend>
         <div class="grid">
