--- a/tour.html
+++ b/tour.html
@@ -33,7 +33,7 @@
       </nav>
     </div>
   </header>
-  <main class="background">
+  <main role="main" id="main" tabindex="0" class="background">
     <section>
       <div class="wrapper island">
 
@@ -60,6 +60,45 @@
         </div>
       </div>
     </section>
+    <div class="table-wrapper scrollable">
+      <table class="push 0">
+        <caption class="mega text-center">This is what makes us the best in the industry!</caption>
+        <thead>
+          <tr>
+            <th class="name" scope="col">Plan</th>
+            <th class="star" scope="col">Basic</th>
+            <th class="year" scope="col">Xtra</th>
+            <th class="distance" scope="col">Premium</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th class="not-bold italic" scope="row">60 min video</th>
+            <td>Yes</td>
+            <td>Yes</td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>120 min video</td>
+            <td>No</td>
+            <td>Yes</td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>Unlimited video</td>
+            <td>No</td>
+            <td>No</td>
+            <td>Yes</td>
+          </tr>
+        </tbody>
+        <tfoot class="bold">
+          <tr>
+            <th scope="row">Total</th>
+            <td colspan="3">Free</td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
   </main>
   <footer role="contentinfo">
     <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
