Fix grid on support page

--- a/pricing.html
+++ b/pricing.html
@@ -34,9 +34,10 @@
   </header>
 
   <main class="background">
-    <section>
-      <div class="grid island">
-        <div class="gutter unit xs-1 s-1 m-1-3 l-1-3">
+    <div class="grid island">
+    <section  class="gutter unit xs-1 s-1 m-1-3 l-1-3">
+      <div>
+        <div>
           <div class="box-1-2">
             <p class="gutter pad-b-1-2">Basic</p>
           </div>
@@ -73,8 +74,8 @@
         </div>
       </div>
     </section>
-    <section>
-      <div class="gutter unit xs-1 s-1 m-1-3 l-1-3">
+    <section class="gutter unit xs-1 s-1 m-1-3 l-1-3">
+      <div>
         <div class="box-1-2">
           <p class="gutter pad-b-1-2">Xtra</p>
         </div>
@@ -109,8 +110,8 @@
         </div>
       </div>
     </section>
-    <section>
-      <div class="gutter unit xs-1 s-1 m-1-3 l-1-3">
+    <section class="gutter unit xs-1 s-1 m-1-3 l-1-3">
+      <div>
         <div class="box-1-2">
           <p class="gutter pad-b-1-2">Premium</p>
         </div>
