--- a/support.html
+++ b/support.html
@@ -36,74 +36,71 @@
 
 
   <main class="background">
-    <section>
-      <div class="grid text-center island">
-        <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">
-          <div class="box-1-2">
-            <p class="gutter pad-b-1-2">Basic</p>
-          </div>
-          <div class="plans">
-
-            <img src="" alt="">
-
-            <ol class="list-group gutter-2 text-left">
-              <li>Host up to 100 participants</li>
-              <li>Unlimited 1 to 1 meetings</li>
-              <li>45 minute limit on group meetings</li>
-              <li>Unlimited number of meetings</li>
-              <li>Online Support</li>
-              <li>Video Conferencing Features</li>
-              <li>Web Conferencing Features</li>
-              <li>Group Collaboration Features</li>
-              <li>Security</li>
-            </ol>
-
-            <div class="box">
-
-            </div>
-          </div>
+    <section class="grid text-center island">
+      <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">
+        <div class="box-1-2">
+          <p class="gutter pad-b-1-2">Basic</p>
         </div>
-      </section>
-      <section>
-        <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">
-          <div class="box-1-2">
-            <p class="gutter pad-b-1-2">Basic</p>
-          </div>
-          <div class="plans">
+        <div class="plans">
 
-            <img src="" alt="">
+          <img src="" alt="">
 
-            <ol class="list-group gutter">
-              <li>Host up to 100 participants</li>
-              <li>Unlimited 1 to 1 meetings</li>
-              <li>45 minute limit on group meetings</li>
-              <li>Unlimited number of meetings</li>
-              <li>Online Support</li>
-              <li>Video Conferencing Features</li>
-              <li>Web Conferencing Features</li>
-              <li>Group Collaboration Features</li>
-              <li>Security</li>
-            </ol>
+          <ol class="list-group gutter-2 text-left">
+            <li>Host up to 100 participants</li>
+            <li>Unlimited 1 to 1 meetings</li>
+            <li>45 minute limit on group meetings</li>
+            <li>Unlimited number of meetings</li>
+            <li>Online Support</li>
+            <li>Video Conferencing Features</li>
+            <li>Web Conferencing Features</li>
+            <li>Group Collaboration Features</li>
+            <li>Security</li>
+          </ol>
 
-            <div class="box">
+          <div class="box">
 
-            </div>
           </div>
         </div>
       </div>
-    </section>
-  </main>
-  <footer role="contentinfo">
-    <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
-    </ul>
-  </footer>
+      <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">>
+        <div class="box-1-2">
+          <p class="gutter pad-b-1-2">Basic</p>
+        </div>
+        <div class="plans">
+
+          <img src="" alt="">
+
+          <ol class="list-group gutter">
+            <li>Host up to 100 participants</li>
+            <li>Unlimited 1 to 1 meetings</li>
+            <li>45 minute limit on group meetings</li>
+            <li>Unlimited number of meetings</li>
+            <li>Online Support</li>
+            <li>Video Conferencing Features</li>
+            <li>Web Conferencing Features</li>
+            <li>Group Collaboration Features</li>
+            <li>Security</li>
+          </ol>
+
+          <div class="box">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+<footer role="contentinfo">
+  <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
+    <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
+  </ul>
+</footer>
 </body>
 </html>
