--- a/sign-up.html
+++ b/sign-up.html
@@ -83,6 +83,18 @@
       <input type="hidden" name="_subject" value="Request to sign up">
     </form>
   </section>
+  <footer role="contentinfo">
+    <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
+    </ul>
+  </footer>
 
 
 </body>
